--- a/scss/pirateborg/_item-list.scss
+++ b/scss/pirateborg/_item-list.scss
@@ -44,6 +44,7 @@
         background: black;
         padding: 2px;
         border-radius: 4px;
+        height: 24px;
       }
 
       &.item-container-item {
