--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -52,6 +52,8 @@
   --color-border-light-tertiary: var(--light-border-color);
   --color-border-dark-4: var(--light-border-color);
   --color-border-light-primary: var(--light-border-color);
+  --color-border-highlight: #ff0000;
+  --color-shadow-highlight: #ff0000;
 }
 
 /* ====================== */
