--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -28,6 +28,7 @@
     <a class="item" data-tab="contents">{{ localize "PB.TabContents" }}</a>
     <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
     <a class="item" data-tab="description">{{ localize "PB.TabDescription" }}</a>
+    <a class="item" data-tab="effects">{{ localize 'PB.TabEffects' }}</a>
     <span class="spacer"></span>
   </nav>
 
@@ -35,7 +36,7 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
+      {{editor descriptionHTML target="system.description" button=true owner=owner editable=true}}
     </div>
 
     {{!-- Details Tab --}}
@@ -55,6 +56,11 @@
       <ol class="items-list equipment-list">
         {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
       </ol>
+    </div>
+
+    {{!-- Effects Tab --}}
+    <div class="tab" data-group="primary" data-tab="effects">
+      {{> systems/pirateborg/templates/actor/common/effects.html}}
     </div>
   </section>
 </form>
