--- a/scss/pirateborg/_sheet.scss
+++ b/scss/pirateborg/_sheet.scss
@@ -202,6 +202,7 @@
             border-bottom: 1px solid var(--dark-border-color);
             display: block;
             padding-left: 16px;
+            height: 36px;
           }
         }
       }
