Show localised types for ships

--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -9,7 +9,7 @@
         <input class="actor-name container-name" name="name" type="text" value="{{data.name}}" placeholder="{{ localize 'PB.Name' }}" />
       </div>
       <div class="header-subtitle-row">
-        <div class="actor-type">{{data.type}}</div>
+        <div class="actor-type">{{data.localizedType}}</div>
       </div>
     </div>
   </header>
