--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -11,7 +11,7 @@
         <input class="actor-name container-name" name="name" type="text" value="{{data.name}}" placeholder="{{ localize 'PB.Name' }}" />
       </div>
       <div class="header-subtitle-row">
-        <div class="actor-type">{{data.type}}</div>
+        <div class="actor-type">{{localize data.localizedType}}</div>
       </div>
 
       <div class="header-stats-row">
