--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -160,7 +160,7 @@
               <div class="ammo-select-col">                
                 <select class="ammo-select" name="selectedAmmo-{{item._id}}" data-dtype="Number" data-item-id="{{item._id}}">
                   <option value="">{{localize 'PB.SelectAmmo'}}</option>
-                  {{selectOptions ../data.system.dynamic.ammo selected=item.system.ammoId valueAttr="_id" labelAttr="fullName"}}
+                  {{selectOptions ../data.system.dynamic.ammo selected=item.system.ammoId nameAttr="_id" valueAttr="_id" labelAttr="fullName"}}
                 </select>
               </div>
               {{/if}} {{/if}}
