--- a/scss/pirateborg/_character-sheet.scss
+++ b/scss/pirateborg/_character-sheet.scss
@@ -11,6 +11,12 @@
           justify-content: space-between;
         }
 
+        .stats-bottom-row {
+          margin-top: 16px;
+          display: flex;
+          justify-content: space-between;
+        }
+
         .wield-power {
           flex: 0 0 300px;
           display: flex;
