--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -1575,6 +1575,12 @@ li.folder > .folder-header {
     filter: drop-shadow(0 0 0 rgba(255, 0, 0, 0));
   }
 }
+/* Monk's Sound Enhancement overrides */
+#playlists.sound-enhancement .playlist header.playlist-header,
+#playlists-popout.sound-enhancement .playlist header.playlist-header {
+  background: inherit;
+}
+
 /* ====================== */
 /* Roll Cards */
 /* ====================== */
