--- a/scss/editor.scss
+++ b/scss/editor.scss
@@ -1,9 +1,9 @@
-@import "pirateborg/_root";
-
-.pb-highlight {
-  color: var(--color-underline-header);
-}
-
-table {
-  border-color: var(--dark-border-color);
-}
+//@import "pirateborg/_root";
+//
+//.pb-highlight {
+//  color: var(--color-underline-header);
+//}
+//
+//table {
+//  border-color: var(--dark-border-color);
+//}
