--- a/scss/pirateborg.scss
+++ b/scss/pirateborg.scss
@@ -1,5 +1,6 @@
 @import "pirateborg/_root";
-@import "pirateborg/_flex";
+@import "pirateborg/_sidebar";
+//@import "pirateborg/_flex";
 @import "pirateborg/_pirateborg";
 @import "pirateborg/_sheet";
 @import "pirateborg/_actor-sheet";
