--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -54,6 +54,8 @@
   --color-border-light-primary: var(--light-border-color);
   --color-border-highlight: #ff0000;
   --color-shadow-highlight: #ff0000;
+  --color-underline-active: #44191A;
+  --color-underline-header: #782e22;
 }
 
 /* ====================== */
